--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="main-agileinfo">
 			<div class="agileits-top">
 				<form action="#" method="post">
-					<input class="text" type="text" id="userName" name="Username" placeholder="Felhasználónév" required="">
-					<input class="text email" type="email" id="email" name="email" placeholder="E-mail" required="">
-					<input class="text" type="password" id="password" name="password" placeholder="Jelszó" required="">
+					<input class="text" type="text" id="userName" name="Username" placeholder="Felhasználónév" required="true">
+					<input class="text email" type="email" id="email" name="email" placeholder="E-mail" required="true">
+					<input class="text email" type="email" id="reEmail" name="reemail" placeholder="E-mail újra" required="true">
+					<input class="text" type="password" id="password" name="password" placeholder="Jelszó" required="true">
+					<input class="text" type="password" id="rePassword" name="repassword" placeholder="Jelszó újra" required="true">
 					<div class="wthree-text">
 						<label class="anim">
-							<input type="checkbox" id="terms" class="checkbox" required="">
+							<input type="checkbox" id="terms" class="checkbox" required="true">
 							<span>Elfogadom a feltételeket!</span>
 						</label>
 						<div class="clear"> </div>
